--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,7 +3,7 @@ import Background from "@components/Background.astro";
 import Header from "@components/Header.astro";
 import Footer from "@components/Footer.astro";
 import "@fontsource-variable/onest";
-import "../styles/global.css";
+import "@styles/global.css";
 ---
 
 <!doctype html>
